[gd_scene load_steps=8 format=3 uid="uid://ctieie4m8fb6w"]

[ext_resource type="Script" path="res://Scenes/Enemies/Enemy3/Enemy and Bomb/enemy3_bomb.gd" id="1_feurj"]
[ext_resource type="Texture2D" uid="uid://c8a1uw84k6p0t" path="res://Assets/Tiles/tile_0012.png" id="2_5171k"]
[ext_resource type="Texture2D" uid="uid://dpg4c2khrhqr1" path="res://Assets/Tiles/bombexplosion.png" id="3_0o8ax"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xbtd"]
size = Vector2(17, 10)

[sub_resource type="Animation" id="Animation_pki7w"]
resource_name = "enemybombexplode"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bombexplosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bomb:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bombexplosion:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.24, 0.24), Vector2(10, 10)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("explosion/CollisionShape2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(41.5, 41.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ikqn2"]
_data = {
"enemybombexplode": SubResource("Animation_pki7w")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_fajm0"]
radius = 6.0

[node name="enemy_bomb" type="Area2D"]
script = ExtResource("1_feurj")

[node name="bomb" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-3, 0)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_5171k")
offset = Vector2(0, -3)

[node name="bombexplosion" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-9.53674e-07, -9.53674e-07)
scale = Vector2(0.24, 0.24)
texture = ExtResource("3_0o8ax")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_7xbtd")

[node name="despawntimer" type="Timer" parent="."]
wait_time = 10.0

[node name="enemybombexplode" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ikqn2")
}

[node name="explosion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="explosion"]
shape = SubResource("CircleShape2D_fajm0")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="despawntimer" to="." method="_on_despawntimer_timeout"]
[connection signal="body_entered" from="explosion" to="." method="_on_explosion_body_entered"]
